--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ idna = "==2.8"
 itsdangerous = "==1.1.0"
 jinja2 = "==2.10.3"
 line-bot-sdk = "==1.14.0"
-pygraphviz = "==1.5"
+pygraphviz = {path = "./pygraphviz-1.6-cp37-cp37m-win_amd64.whl"}
 python-dotenv = "==0.10.3"
 requests = "==2.22.0"
 six = "==1.12.0"
